Add gate_sizes property

--- a/qaoa_factorization/notebooks/playground.ipynb
+++ b/qaoa_factorization/notebooks/playground.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,8 @@
       "Hc: 90.0 * I([0, 1, 2]) + 36.0 * Z(0) + 20.0 * Z(1) + 40.0 * Z(2) + 2.0 * (Z(0) @ Z(1)) + 4.0 * (Z(0) @ Z(2)) + 20.0 * (Z(1) @ Z(2)) + -16.0 * (Z(0) @ Z(1) @ Z(2))\n",
       "Hm: X(0) + X(1) + X(2)\n",
       "\n",
-      "Number of gates: 13\n"
+      "Number of gates: 13\n",
+      "Gate sizes: {1: 9, 2: 3, 3: 1}\n"
      ]
     },
     {
@@ -177,6 +178,7 @@
     "print(f'Hc: {solver.Hc}')\n",
     "print(f'Hm: {solver.Hm}')\n",
     "print(f'\\nNumber of gates: {solver.num_gates}')\n",
+    "print(f'Gate sizes: {solver.gate_sizes}')\n",
     "\n",
     "solver.draw_circuit()"
    ]
