Fixed num_2qubit_gates field

--- a/qaoa_factorization/notebooks/analysis.ipynb
+++ b/qaoa_factorization/notebooks/analysis.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
     "experiment_results = pd.concat(experiment_results)\n",
     "experiment_results = experiment_results.rename(columns={'success': 'optimizer_success', 'message': 'optimizer_message'})\n",
     "experiment_results['num_qubits'] = experiment_results['nx'] + experiment_results['ny']\n",
-    "experiment_results['num_2qub_gates'] = experiment_results['gate_sizes'].apply(lambda d: d['2'] + d.get('3',0)*4 + d.get('4',0)*6)\n",
+    "experiment_results['num_2qub_gates'] = experiment_results['gate_sizes'].apply(lambda d: d['2']*2 + d.get('3',0)*4 + d.get('4',0)*6)\n",
     "experiment_results['state_comp_probs'] = experiment_results['state'].apply(lambda s: [abs(complex(c))**2 for c in s])\n",
     "experiment_results['state_comp_max'] = experiment_results['state_comp_probs'].apply(lambda s: np.argmax(s))\n",
     "experiment_results['state_comp_max_bin'] = experiment_results.apply(lambda row: int_to_binary_str(row['state_comp_max'], row['nx']+row['ny']), axis=1)\n",
