New paper plots

--- a/qaoa_factorization/notebooks/playground.ipynb
+++ b/qaoa_factorization/notebooks/playground.ipynb
@@ -31,21 +31,46 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Building QAOASolver object\n",
+      "Building Hamiltonians...\n",
+      "Hp completed\n",
+      "Hm completed\n",
+      "Hc completed\n"
+     ]
+    }
+   ],
    "source": [
-    "solver = QAOASolver(N=21, p=3,\n",
-    "                    problem_hamiltonian_gen=default_problem_H,\n",
-    "                    mixer_hamiltonian_gen=default_mixer_H,\n",
-    "                    cost_hamiltonian_gen=default_problem_H)"
+    "solver = QAOASolver(N=533, p=1,\n",
+    "                    problem_hamiltonian_gen=quadratic_H,\n",
+    "                    mixer_hamiltonian_gen=standard_mixer_H,\n",
+    "                    cost_hamiltonian_gen=quadratic_H)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:27<00:00, 27.93s/rep]\n"
+     ]
+    }
+   ],
    "source": [
-    "best, results, monitoring = solver.run(iters=10)"
+    "best, results = solver.run(reps=1)"
    ]
   },
   {
