Prepared example notebook run_simulator.ipynb

--- a/thesis/Thesis.tex
+++ b/thesis/Thesis.tex
@@ -30,14 +30,14 @@
 
 \input{abbreviations}
 
+\usepackage[skip=6pt, indent=14pt]{parskip}
+
 
 
 %%%%%%%%%%%%%%%
 % Custom packages
 %%%%%%%%%%%%%%%
 \usepackage{lipsum}
-
-
 
 
 \begin{document}
@@ -110,8 +110,8 @@
 % Chapter 1
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \include{01-introduction/00-Introduction}
-\include{01-introduction/01-GateModelComputation}
-\include{01-introduction/02-AdiabaticComputation}
+\include{01-introduction/01-CircuitModel}
+\include{01-introduction/02-AdiabaticModel}
 \include{01-introduction/03-QAOABasicConcepts}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
