Saved analysis plots in plots folder

--- a/qaoa_factorization/notebooks/analysis.ipynb
+++ b/qaoa_factorization/notebooks/analysis.ipynb
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
     "\n",
     "        axs[i,k].legend(loc='best');\n",
     "\n",
-    "fig_name = f'methods_comparison.pdf'\n",
+    "fig_name = f'plots/methods_comparison.pdf'\n",
     "plt.savefig(fig_name, bbox_inches='tight')\n"
    ]
   },
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
     "\n",
     "    axs[i].legend(loc='best');\n",
     "\n",
-    "fig_name = f'setups_comparison.pdf'\n",
+    "fig_name = f'plots/setups_comparison.pdf'\n",
     "plt.savefig(fig_name, bbox_inches='tight')\n"
    ]
   },
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
     "        axs[i][j].xaxis.set_major_locator(ticker.NullLocator())\n",
     "        axs[i][j].set_title(f'N = {N}, setup = {setup}')\n",
     "\n",
-    "fig_name = f'analysis_populations.pdf'\n",
+    "fig_name = f'plots/analysis_populations.pdf'\n",
     "plt.savefig(fig_name, bbox_inches='tight')"
    ]
   },
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
     "\n",
     "        axs[i,k].legend(loc='best');\n",
     "\n",
-    "fig_name = f'extrapolation.pdf'\n",
+    "fig_name = f'plots/extrapolation.pdf'\n",
     "plt.savefig(fig_name, bbox_inches='tight')"
    ]
   }
