--- a/thesis/01-introduction/02-AdiabaticModel.tex
+++ b/thesis/01-introduction/02-AdiabaticModel.tex
@@ -1,8 +1,41 @@
 \section{Adiabatic Quantum Computation}
 \label{Section:AQC}
 
+The adiabatic theorem of quantum mechanics provides the foundation for an alternative model
+of quantum computation based on continuous-time evolution. Consider a time-dependent Hamiltonian
+$H(t)$ with a discrete and non-degenerate spectrum. Thus we can define its instantaneous
+eigenstates and eigenenergies by $$H(t) \ket{n(t)} = E_n (t) \ket{n(t)}.$$
 
-Talk here about adiabatic theorem and evolutions. Then, introduce the concept/definition of adiabatic quantum computation, where we define the problem Hamiltonians and etc. To this end, we can get results by Sarandy [https://doi.org/10.1007/s11128-004-7712-7] and references therein, and some discussion done in [Rev. Mod. Phys. 90, 015002 (2018)] to make our life easier.
+\noindent The adiabatic theorem states that a quantum system initially prepared in an eigenstate
+$\ket{n(0)}$ of  $H(t)$, will remain in its instantaneous eigenstate $\ket{n(t)}$ throughout
+the evolution, provided that the spectrum remains gapped and the change is sufficiently
+slow~\cite{sarandy_consistency_2004,albash_adiabatic_2018}. This last condition is generally formulated as follows:
+$$\max_{0 \leq t \leq T} \bigg| \dfrac{\bra{k} \dot{H} \ket{n}}{g_{nk}} \bigg| \ll \min_{0 \leq t \leq T} \big| g_{nk} \big|,$$
+where $T$ is the total evolution time and $g_{nk}$ represents the energy gap between levels $n$ and $k$: 
+$$g_{nk}(t) \equiv E_n(t) - E_k(t)$$
+
+Even though, it is customary in quantum computation to focus on
+ground state adiabatic passages. This is because ground states are typically more robust against
+decoherence and thermal excitations, as they are energetically isolated from higher-energy levels.
+Moreover, for many computational problems, particularly those related to optimization problems,
+it is possible to construct a problem Hamiltonian $H_\mathrm{P}$ whose ground state encodes
+the solution to the instance under consideration.
+
+In the adiabatic quantum computation model, the Hamiltonian is interpolated between an
+initial Hamiltonian $H_0$, with a known and easily preparable ground state, and the problem
+Hamiltonian $H_\mathrm{P}$, according to a schedule~\cite{albash_adiabatic_2018}:
+$$H(t) = (1 - s(t)) H_0 + s(t) H_P, \quad s(t) \in [0,1],$$
+where $s(t)$ is a smooth, monotonic function such that $s(0)=0$ and $s(T)=1$. The problem
+Hamiltonian $H_\mathrm{P}$ is designed so that its ground state corresponds to the solution
+of the computational task.
+
+(Maybe talk about AQC can be efficiently simulated in the circuit model).
+
+
+Talk here about adiabatic theorem and evolutions. Then, introduce the concept/definition of
+adiabatic quantum computation, where we define the problem Hamiltonians and etc. To this end,
+we can get results by Sarandy [https://doi.org/10.1007/s11128-004-7712-7] and references therein,
+and some discussion done in [Rev. Mod. Phys. 90, 015002 (2018)] to make our life easier.
 
 \lipsum[1-2]
 
