--- a/thesis/Thesis.tex
+++ b/thesis/Thesis.tex
@@ -10,8 +10,8 @@
 \makeatother
 
 \AtBeginDocument{%
-	\DeclareSymbolFont{operators}{OT1}{ntxtlf}{m}{n} % Tentar redefinir operadores
-	\SetSymbolFont{operators}{bold}{OT1}{ntxtlf}{b}{n} % Para versão em negrito
+	\DeclareSymbolFont{operators}{OT1}{ntxtlf}{m}{n}
+	\SetSymbolFont{operators}{bold}{OT1}{ntxtlf}{b}{n}
 }
 \usepackage{bbm}
 \newcommand{\1}{\mathbbm{1}}
@@ -30,7 +30,7 @@
 
 \input{abbreviations}
 
-\usepackage[skip=6pt, indent=14pt]{parskip}
+\usepackage[skip=4pt, indent=16pt]{parskip}
 
 
 
@@ -160,7 +160,7 @@ to this timestamped version.
 
 \bibliographystyle{unsrt}
 % argument is your BibTeX string definitions and bibliography database(s)
-\bibliography{dissertation}
+\bibliography{bibliography}
 
 
 %%%%
