--- a/thesis/Thesis.tex
+++ b/thesis/Thesis.tex
@@ -32,7 +32,7 @@
 
 \usepackage[skip=4pt, indent=16pt]{parskip}
 
-
+\renewcommand{\theequation}{\arabic{equation}}
 
 %%%%%%%%%%%%%%%
 % Custom packages
