--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -18,6 +18,25 @@
 	file = {Preprint PDF:/home/fpellicer/Zotero/storage/CLGKYJ6H/Peng et al. - 2008 - A Quantum Adiabatic Algorithm for Factorization and Its Experimental Implementation.pdf:application/pdf;Snapshot:/home/fpellicer/Zotero/storage/XVUQ3DCA/0808.html:text/html},
 }
 
+@article{zhou_quantum_2020,
+	title = {Quantum {Approximate} {Optimization} {Algorithm}: {Performance}, {Mechanism}, and {Implementation} on {Near}-{Term} {Devices}},
+	volume = {10},
+	issn = {2160-3308},
+	shorttitle = {Quantum {Approximate} {Optimization} {Algorithm}},
+	url = {https://link.aps.org/doi/10.1103/PhysRevX.10.021067},
+	doi = {10.1103/PhysRevX.10.021067},
+	language = {en},
+	number = {2},
+	urldate = {2025-03-02},
+	journal = {Physical Review X},
+	author = {Zhou, Leo and Wang, Sheng-Tao and Choi, Soonwon and Pichler, Hannes and Lukin, Mikhail D.},
+	month = jun,
+	year = {2020},
+	keywords = {Quantum Physics, Condensed Matter - Disordered Systems and Neural Networks, Condensed Matter - Statistical Mechanics},
+	pages = {021067},
+	file = {Preprint PDF:/home/fpellicer/Zotero/storage/NHM6DF24/Zhou et al. - 2020 - Quantum Approximate Optimization Algorithm Performance, Mechanism, and Implementation on Near-Term.pdf:application/pdf;Snapshot:/home/fpellicer/Zotero/storage/8FGXJ4NG/1812.html:text/html},
+}
+
 @article{sarandy_consistency_2004,
 	title = {Consistency of the {Adiabatic} {Theorem}},
 	volume = {3},
@@ -64,6 +83,22 @@
 	month = jun,
 	year = {2025},
 	note = {arXiv:2506.03241 [quant-ph]},
-	keywords = {Condensed Matter - Statistical Mechanics, Quantum Physics},
+	keywords = {Quantum Physics, Condensed Matter - Statistical Mechanics},
 	file = {Preprint PDF:/home/fpellicer/Zotero/storage/NPBD2SY8/Díez-Valle et al. - 2025 - Universal Resources for QAOA and Quantum Annealing.pdf:application/pdf;Snapshot:/home/fpellicer/Zotero/storage/JWKCSGWS/2506.html:text/html},
+}
+
+
+@misc{farhi_quantum_2014,
+	title = {A {Quantum} {Approximate} {Optimization} {Algorithm}},
+	url = {http://arxiv.org/abs/1411.4028},
+	doi = {10.48550/arXiv.1411.4028},
+	abstract = {We introduce a quantum algorithm that produces approximate solutions for combinatorial optimization problems. The algorithm depends on a positive integer p and the quality of the approximation improves as p is increased. The quantum circuit that implements the algorithm consists of unitary gates whose locality is at most the locality of the objective function whose optimum is sought. The depth of the circuit grows linearly with p times (at worst) the number of constraints. If p is fixed, that is, independent of the input size, the algorithm makes use of efficient classical preprocessing. If p grows with the input size a different strategy is proposed. We study the algorithm as applied to MaxCut on regular graphs and analyze its performance on 2-regular and 3-regular graphs for fixed p. For p = 1, on 3-regular graphs the quantum algorithm always finds a cut that is at least 0.6924 times the size of the optimal cut.},
+	urldate = {2025-06-19},
+	publisher = {arXiv},
+	author = {Farhi, Edward and Goldstone, Jeffrey and Gutmann, Sam},
+	month = nov,
+	year = {2014},
+	note = {arXiv:1411.4028 [quant-ph]},
+	keywords = {Quantum Physics},
+	file = {Preprint PDF:/home/fpellicer/Zotero/storage/TUMFW47N/Farhi et al. - 2014 - A Quantum Approximate Optimization Algorithm.pdf:application/pdf;Snapshot:/home/fpellicer/Zotero/storage/BXLTQYJH/1411.html:text/html},
 }
