--- a/thesis/Thesis.tex
+++ b/thesis/Thesis.tex
@@ -118,6 +118,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Chapter 2
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\include{02-factorization/00-Introduction}
 \include{02-factorization/01-ShorsAlgo}
 \include{02-factorization/02-AdiabaticFactorization}
 
