--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -102,3 +102,14 @@
 	keywords = {Quantum Physics},
 	file = {Preprint PDF:/home/fpellicer/Zotero/storage/TUMFW47N/Farhi et al. - 2014 - A Quantum Approximate Optimization Algorithm.pdf:application/pdf;Snapshot:/home/fpellicer/Zotero/storage/BXLTQYJH/1411.html:text/html},
 }
+
+@article{montgomery_cwi_1994,
+	title                = {A survey of modern integer factorization algorithms},
+	author               = {Montgomery, P.L.},
+	journal              = {CWI Quarterly},
+	volume               = {7},
+	number               = {4},
+	pages                = {337---366},
+	year                 = 1994,
+	month                = dec
+}
